--- a/index.html
+++ b/index.html
@@ -26,36 +26,39 @@
   <body>
 
     <main>
-      <section>
+      <section class="overview">
         <h1> 10,000+ of our users love our products.</h1>
         <p>We only provide great products combined with excellent customer service.
           See what our satisfied customers are saying about our services.
         </p>
       </section>
-      <section>
+      <section class="ratings">
         <div>Rated 5 Stars in Reviews</div>
         <div>Rated 5 Stars in Report Guru</div>
         <div>Rated 5 Stars in BestTech</div>
       </section>
-      <section>
+      <section class="feedback">
         <div>
-          <img src="/images/image-colton.jpg" alt="">
-          <div>
-            <div>Colton Smith</div>
-            <div>Verified Buyer</div>
+          <div class="personal">
+            <img src="/images/image-colton.jpg" alt="">
+            <aside>
+              <div>Colton Smith</div>
+              <div>Verified Buyer</div>
+            </aside>
           </div>
           <p>
             "We needed the same printed design as the one we had ordered a week prior.
             Not only did they find the original order, but we also received it in time.
-            Excellent!"
-            
+            Excellent!" 
           </p>
         </div>
         <div>
-          <img src="/images/image-irene.jpg" alt="">
-          <div>
-            <div> Irene Roberts</div>
-            <div>Verified Buyer</div>
+          <div class="personal">
+            <img src="/images/image-irene.jpg" alt="">
+            <aside>
+              <div> Irene Roberts</div>
+              <div>Verified Buyer</div>
+            </aside>
           </div>
           <p>
             "Customer service is always excellent and very quick turn around. Completely
@@ -63,10 +66,12 @@
           </p>
         </div>
         <div>
-          <img src="/images/image-anne.jpg" alt="">
-          <div>
-            <div>Anne Wallace</div>
-            <div>Verified Buyer</div>
+          <div class="personal">
+            <img src="/images/image-anne.jpg" alt="">
+            <aside>
+              <div>Anne Wallace</div>
+              <div>Verified Buyer</div>
+            </aside>
           </div>
           <p>
             "Put an order with this company and can only praise them for the very high
