css and html for desktop done

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
       </section>
       <section class="feedback">
-        <div>
+        <div class="card">
           <div class="personal">
             <img src="/images/image-colton.jpg" alt="foto">
             <aside>
@@ -82,7 +82,7 @@
             Excellent!" 
           </p>
         </div>
-        <div>
+        <div class="card">
           <div class="personal">
             <img src="/images/image-irene.jpg" alt="foto">
             <aside>
@@ -95,7 +95,7 @@
             delighted with the simplicity of the purchase and the speed of delivery."
           </p>
         </div>
-        <div>
+        <div class="card">
           <div class="personal">
             <img src="/images/image-anne.jpg" alt="foto">
             <aside>
